--- a/src/main/resources/static/web/pagesCss/index.css
+++ b/src/main/resources/static/web/pagesCss/index.css
@@ -4,7 +4,9 @@
 * {
 	box-sizing: border-box;
 }
-
+header{
+	height: 15vh;
+}
 main {
 	background: #f6f5f7;
 	display: flex;
@@ -12,8 +14,36 @@ main {
 	align-items: center;
 	flex-direction: column;
 	font-family: 'Montserrat', sans-serif;
-	height: 100vh;
+	height: 100%;
 	margin: -20px 0 50px;
+}
+.art-index{
+	width:100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding-top: 2rem;
+}
+
+.img-art {
+    display: flex;
+    flex-direction: column;
+	height: 300px;
+    width: 650px;
+    justify-content: flex-start;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.8) 0px 22px 70px 4px;
+}
+
+.order-paragraph {
+    font-style: italic;
+    text-align: center;
+    font-size: large;
+    width: 40vw;
+    min-height: 10%;
+    background-color: rgba(97, 145, 158, 0.575);
+    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+    border-radius: 5px;
 }
 p {
 	font-size: 14px;
@@ -177,4 +207,52 @@ form {
 
 .container.right-panel-active .overlay-right {
 	transform: translateX(20%);
+}
+@media only screen and (min-width:320px)and (max-width:425px){
+	.art-index{
+		flex-direction: column;
+		gap: 1rem;
+	}
+	.img-art {
+		height: 180px;
+		width: 300px;
+
+	}
+	
+	.order-paragraph {
+		font-size: xx-small;
+		width: 90vw;
+	}
+}
+@media only screen and (min-width:426px)and (max-width:787px){
+	.art-index{
+		flex-direction: column;
+		gap: 1rem;
+	}
+	.img-art {
+		height: 250px;
+		width: 500px;
+
+	}
+	.order-paragraph {
+		font-size: medium;
+		width: 60vw;
+	}
+}
+@media only screen and (min-width:788px)and (max-width:1070px){
+	.art-index{
+		flex-direction: column;
+		gap: 1rem;
+		width:100%;
+	}
+	.img-art {
+		height: 350px;
+		width:90%;
+
+	}
+	
+	.order-paragraph {
+		font-size: large;
+		width: 70vw;
+	}
 }
